[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[example]]
name = "channel"
path = "examples/channel.rs"

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.6"
atoi = "2.0.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
async-channel = { version = "2.3.1" }
anyhow = { version = "^1.0.58" }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.18"


[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.40.0", features = ["test-util"] }
